[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "drmdp-drl"
version = "0.16.8"
authors = [{name = "guilherme", email = "guilherme@dsv.su.se"}]
maintainers = [{name = "guilherme", email = "guilherme@dsv.su.se"}]
description = "Reinforcement learning with delayed, aggregate, and anonymous feedback"
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
]
urls = {Homepage = "https://github.com/guidj/drmdp-drl"}
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.4.0",
    "scipy>=1.14.1",
    "numpy>=1.23.5",
    "rlplg==0.21.8",
    "ray[data,default,tune]==2.48",
    "tensorflow>=2.11.1",
    "cvxpy>=1.5.3,<1.6",
    "stable-baselines3>=2.4.1",
    "torch>=2.1.2",
    "scikit-learn>=1.6.1",
    "type-extensions>=0.1.2",
    "gymnasium[classic-control]",
    "cma>=4.0.0",
    "gym-electric-motor>=2.0.0",
    "seaborn>=0.13.1",
    "tabulate",
]

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.bumpver]
current_version = "0.16.8"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = "sbin/commit_hooks/sync-versions.sh"
post_commit_hook = ""
commit = "True"
tag = "True"
push = "True"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
    '^current_version = "{version}"$',

]
"src/drmdp/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.pytest.ini_options]
addopts = "-v --cov=drmdp --junitxml=test-results/junit.xml --cov-report=xml:cobertura/coverage.xml --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "I",
    "E",
    "D419",  # empty-docstring
    "W291",  # trailing-whitespace
    "PLC0414",  # useless-import-alias
    "PLC2401",  # non-ascii-name
    "PLC2801",  # unnecessary-dunder-call
    "PLC3002",  # unnecessary-direct-lambda-call
    "PLE0101",  # return-in-init
    "F706",  # return-outside-function
    "F704",  # yield-outside-function
    "PLE0115",  # nonlocal-and-global
    "PLE0117",  # nonlocal-without-binding
    "PLE0241",  # duplicate-bases
    "PLE0302",  # unexpected-special-method-signature
    "PLE0604",  # invalid-all-object
    "PLE0605",  # invalid-all-format
    "PLE0643",  # potential-index-error
    "PLE0704",  # misplaced-bare-raise
    "PLE1141",  # dict-iter-missing-items
    "PLE1142",  # await-outside-async
    "PLE1205",  # logging-too-many-args
    "PLE1206",  # logging-too-few-args
    "PLE1307",  # bad-string-format-type
    "PLE1310",  # bad-str-strip-call
    "PLE1507",  # invalid-envvar-value
    "PLE1519",  # singledispatch-method
    "PLE1520",  # singledispatchmethod-function
    "PLE2502",  # bidirectional-unicode
    "PLE2510",  # invalid-character-backspace
    "PLE2512",  # invalid-character-sub
    "PLE2513",  # invalid-character-esc
    "PLE2514",  # invalid-character-nul
    "PLE2515",  # invalid-character-zero-width-space
    "PLE4703",  # modified-iterating-set
    "PLR0124",  # comparison-with-itself
    "PLR0202",  # no-classmethod-decorator
    "PLR0203",  # no-staticmethod-decorator
    "UP004",  # useless-object-inheritance
    "PLR0206",  # property-with-parameters
    "PLR0904",  # too-many-public-methods
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too-many-statements
    "PLR0916",  # too-many-boolean-expressions
    "PLR0917",  # too-many-positional-arguments
    "PLR1702",  # too-many-nested-blocks
    "PLR1704",  # redefined-argument-from-local
    "PLR1708",  # stop-iteration-return
    "PLR1711",  # useless-return
    "C416",  # unnecessary-comprehension
    "PLR1733",  # unnecessary-dict-index-lookup
    "PLR1736",  # unnecessary-list-index-lookup
    "PLW0108",  # unnecessary-lambda
    "PLW0120",  # useless-else-on-loop
    "PLW0127",  # self-assigning-variable
    "PLW0128",  # redeclared-assigned-name
    "PLW0129",  # assert-on-string-literal
    "B033",  # duplicate-value
    "PLW0131",  # named-expr-without-context
    "PLE0116",  # continue-in-finally
    "PLW0177",  # nan-comparison
    "PLW0211",  # bad-staticmethod-argument
    "PLW0244",  # redefined-slots-in-subclass
    "PLW0245",  # super-without-brackets
    "PLW0406",  # import-self
    "PLW0602",  # global-variable-not-assigned
    "PLW0603",  # global-statement
    "PLW0604",  # global-at-module-level
    "F401",  # unused-import
    "F841",  # unused-variable
    "E722",  # bare-except
    "PLW0711",  # binary-op-exception
    "PLW1501",  # bad-open-mode
    "PLW1507",  # shallow-copy-environ
    "PLW1508",  # invalid-envvar-default
    "PLW1509",  # subprocess-popen-preexec-fn
    "PLW1514",  # unspecified-encoding
    "PLW2101",  # useless-with-lock
    "PLW3301",  # nested-min-max    
]
ignore = [
    "E501",  # line-too-long
]
preview = true

[tool.ruff.lint.pylint]
max-args = 15
max-bool-expr = 5
max-branches = 12
max-locals = 75
max-returns = 6
max-statements = 75

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 12

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
plugins = []
ignore_missing_imports = true

[tool.uv.sources]
rlplg = { git = "https://github.com/guidj/rlplg" }

[dependency-groups]
rendering = [
    "pyglet>=1.5.31",
]

dev = [
    "attrs==22.2.0",
    "bumpver>=2024.1130",
    "click==8.1.3",
    "cloudpickle==2.2.1",
    "coverage>=7.6.1",
    "debugpy>=1.8.13",
    "exceptiongroup==1.2.0",
    "farama-notifications==0.0.4",
    "ghp-import==2.1.0",
    "gradio>=3.50.2",
    "hypothesis>=6.65.1",
    "iniconfig==2.0.0",
    "ipywidgets>=8.0.7",
    "jinja2==3.1.2",
    "jiwer>=3.0.5",
    "jupyter-nbextensions-configurator==0.6.3",
    "jupyter-resource-usage==0.7.2",
    "jupyter-server>=2.4.0,<3",
    "jupyterlab==4.0.13",
    "line-profiler>=4.2.0",
    "markdown==3.4.1",
    "markupsafe==2.1.2",
    "matplotlib>=3.8.1",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "packaging==23.0",
    "pathspec==0.11.2",
    "platformdirs==4.0.0",
    "pluggy==1.5.0",
    "pytest>=8.3.1",
    "pytest-cov>=6.0.0",
    "python-dateutil==2.8.2",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "ruff>=0.8.6",
    "seaborn==0.13.1",
    "six==1.16.0",
    "sortedcontainers==2.4.0",
    "statsmodels==0.14.1",
    "tqdm>=4.66.2",
    "typing-extensions>4.12",
    "watchdog==2.3.1",
]
